# imd_dataset_pipeline

./: .env.example  .gitignore  README.md  main.py  problem_statement.md  pyproject.toml  test.py
config/: pipeline_parameters.toml  run_parameters.toml
data/config/: amenity_groups.json  ratio_pairs.json
data/config/stat_xplore_queries/: ca_2025.json  esa_2025.json  incapacity_benfits_2025.json  income_support_2025.json  jobseekers_allowance_2025.json  sda_claims_2025.json  uc_no_work_req_2025.json  uc_planning_work_2025.json  uc_prep_work_2025.json  uc_search_work_2025.json  uc_template.json
data/lookup/: lsoa_2011_2021_lookup.csv  population_lookup.csv  postcode_lookup.csv
data/output/bristol_city_of/: combined_indicators.parquet
data/raw/lookup/: geography_lookup.parquet  lsoa_2011_2021_lookup.parquet
data/raw/universal_credit/: universal_credit.parquet
imd_pipeline/: config.py
imd_pipeline/combine/: __init__.py  join.py
imd_pipeline/fetch/: __init__.py  connectivity.py  fetch_universal_credit.py  geography_lookup.py  land_registry.py  lsoa_2011_2021_lookup.py  open_street_map.py  police_uk.py  population_lookup.py  postcode_lookup.py  universal_credit.py
imd_pipeline/process/: __init__.py  connectivity.py  geography_lookup.py  land_registry.py  lsoa_2011_2021_lookup.py  open_street_map.py  police_uk.py  population_lookup.py  postcode_lookup.py  universal_credit.py
imd_pipeline/utils/: http.py  lsoas.py  timeframes.py
orchestration/: __init__.py  assets.py  configs.py  definitions.py  jobs.py  policies.py  schedules.py
orchestration/defs/: assets.py  policies.py
scripts/: quarterly_backfill_op.py  stitch.py  test_empty_files.py
src/fetch/: fetch_universal_credit.py  land_registry.py  police_uk.py
src/utils/: http.py  lsoas.py
tests/: test_imports.py  test_timeframes.py
