[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages=["imd_pipeline"]

[project]
name = "imd-dataset-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopandas>=1.1.2",
    "geopolars>=0.1.0a4",
    "joblib>=1.5.3",
    "loguru>=0.7.3",
    "odfpy>=1.4.1",
    "pandas>=3.0.0",
    "polars>=1.38.1",
    "project-paths>=1.1.1",
    "python-dotenv>=1.2.1",
    "ratelimit>=2.2.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
    "shapely>=2.1.2",
    "statxplore>=0.0.1.post1",
]

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "ruff>=0.15.2",
]

[tool.project-paths]
data_raw = "data/raw"
data_processed = "data/processed"
data_lookup = "data/lookup"
data_output = "data/output"
data_config = "data/config"
run_config = "config/run_parameters.toml"
pipeline_config = "config/pipeline_parameters.toml"

[tool.imd-pipeline]
snapshot_year = 2025
police_start_year = 2023
police_end_year = 2026
osm_buffer_distances = [0, 250, 500, 1000, 2500, 5000]
bristol_lad_code = "E06000023"
